added heading line through

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,3 +1,6 @@
 @import "./variables/colors.scss";
+@import "./variables/fonts.scss";
 @import "./layout/nav.scss";
 @import "./components/banners.scss";
+@import "./components/buttons.scss";
+@import "./helpers/helpers.scss";
