--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -1,11 +1,22 @@
 a.btn, button.btn {
-    padding: 12px 16px;
+    display: inline-block;
     border-radius: 18px;
+    font-size: $base-font-size;
+    padding: 12px 16px;
 }
 
 a.btn-primary,
 button.btn-primary {
     @extend a.btn;
     background-color: $primary-1;
-    font-size: $base-font-size;
+
+}
+
+a.btn-secondary,
+button.btn-secondary {
+    @extend a.btn;
+    background-color: $secondary-1;
+    color: white;
+    padding: 8px 12px;
+
 }
