--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,6 +1,7 @@
 @import "./variables/colors.scss";
 @import "./variables/fonts.scss";
+@import "./helpers/helpers.scss";
+@import "./helpers/breakpoints.scss";
 @import "./layout/nav.scss";
 @import "./components/banners.scss";
 @import "./components/buttons.scss";
-@import "./helpers/helpers.scss";
