--- a/src/scss/components/_banners.scss
+++ b/src/scss/components/_banners.scss
@@ -1,5 +1,3 @@
-$base-margin: 8px;
-
 .header.header--home {
     background: url('../img/home-blue.jpg');
     background-size: cover;
@@ -47,12 +45,17 @@ $base-margin: 8px;
     overflow: hidden;
     padding: $base-margin * 4 0;
 
+
+    & h2.banner__h2 {
+        margin-top: 0;
+    }
+
     &.bg-primary {
         color: white;
     }
 
     h2.line-thru {
-        color: $grey-lightest;
+        color: $grey-light;
         display: inline-block;
         font-weight: normal;
         margin-top: 0;
@@ -118,7 +121,6 @@ section.banner--hiw {
     padding-right: 0;
     padding-top: $base-margin * 3;
     padding-bottom: $base-margin * 3;
-    background-color: $grey-lightest;
 
     & p.banner__p {
         display: inline;
@@ -126,10 +128,14 @@ section.banner--hiw {
     }
 
     & a.btn-secondary {
-        // display: inline-block;
-        // margin-top: $base-margin;
         margin-left: $base-margin * 3;
         font-size: 14px;
 
+    }
+
+    @include respond-to(sm) {
+        & a.btn-secondary {
+            margin-left: 0;
+        }
     }
 }
