--- a/src/scss/variables/_colors.scss
+++ b/src/scss/variables/_colors.scss
@@ -1,10 +1,17 @@
 $primary-1: rgba(181, 226, 82, 1);
+$primary-1-hover: rgba(150, 185, 71, 1);
 $secondary-1: rgba(1, 102, 153, 1);
 
-$grey-lightest: rgba(204, 204, 204, 1);
+$grey: rgba(110, 110, 110, 1);
+$grey-light: rgba(180, 180, 180, 1);
+$grey-lightest: rgba(225, 225, 225, 1);
 
 .bg-primary {
     background-color: $secondary-1;
+}
+
+.bg-grey-lightest {
+    background-color: $grey-lightest;
 }
 
 h1.h1-secondary,
