--- a/src/scss/theme/_theme.scss
+++ b/src/scss/theme/_theme.scss
@@ -1,3 +1,9 @@
 html, body  {
     color: $grey;
+    font-family: $main-font-family;
+}
+
+h1, h2, h3, h4, h5 ,h6,
+p, li, a, blockquote {
+    font-family: $main-font-family;
 }
