--- a/src/scss/variables/_fonts.scss
+++ b/src/scss/variables/_fonts.scss
@@ -1,2 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Catamaran');
+
+$main-font-family: 'Catamaran', sans-serif;
+
 $base-font-size: 16px;
 $font-margin: 8px;
