--- a/src/scss/components/_form.scss
+++ b/src/scss/components/_form.scss
@@ -1,14 +1,10 @@
-// .form-submit-wrapper {
-//     display: inline-block;
-//     border-radius: 18px;
-//     border: 1px solid $grey;
-// }
-
 .form-submit__input {
     box-sizing: border-box;
     border: 1px solid $grey;
-    padding: 16px;
     border-radius: $base-margin * 2;
+    margin-top: $base-margin * 2;
+    margin-bottom: $base-margin * 4;
+    padding: 16px;
     transition: border ease 0.35s;
     min-width: 300px;
     z-index: 0;
@@ -31,8 +27,8 @@
     margin-left: -100px;
     padding-top: ($base-margin * 2) - 2;
     padding-bottom: $base-margin * 2;
-    padding-left: $base-margin * 2;
-    padding-right: ($base-margin * 2) + 2;
+    padding-left: ($base-margin * 2) + 6;
+    padding-right: ($base-margin * 2) + 6;
     transition: all ease 0.35s;
     z-index: -1;
 }
@@ -40,7 +36,4 @@
 .form-submit__button:hover {
     color: white;
     background: $secondary-1;
-    // padding-top: ($base-margin * 2) - 2;
-    // padding-bottom: $base-margin * 2;
-
 }
