added poster for video placeholder and updated mobile nav

--- a/src/scss/components/_swiper.scss
+++ b/src/scss/components/_swiper.scss
@@ -18,3 +18,7 @@
     -webkit-align-items: center;
     align-items: center;
 }
+
+span.swiper-pagination-bullet.swiper-pagination-bullet-active {
+    background: white;
+}
