--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -26,7 +26,8 @@
 .navbar.navbar-default.navbar--offerr li {
     border-radius: $base-margin;
     display: inline;
-    padding: $base-margin;
+    padding: $base-margin - 2;
+    margin-right: $base-margin - 2;
     transition: background-color ease 0.5s;
 
     &:hover {
@@ -40,8 +41,24 @@
         transition: color ease 0.5s;
     }
 
+
     &:hover a {
         color: $secondary-1;
+    }
+
+    @include respond-to(sm) {
+        & {
+            border-radius: 0;
+            display: flex;
+            height: 44px;
+            justify-content: center;
+            transition: background-color ease 0.5s;
+            width: 100%;
+        }
+
+        & > a {
+            align-self: center;
+        }
     }
 }
 
